# nura

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
api/: db.py  main.py  retrain.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/features/: ApiKeyCard.tsx  ImprovementChart.tsx  MetricsRow.tsx  RecommendationBox.tsx
dashboard/src/lib/: api.ts
dashboard/src/types/: index.ts
examples/customer_support/data/: train.jsonl
nura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk/nura/: __init__.py  cli.py
sdk/nura/adapters/: __init__.py  base.py  ollama_adapter.py
sdk/nura/brain/: __init__.py  base.py  ollama_brain.py
sdk/nura/data/: __init__.py  loader.py
sdk/nura/rewards/: __init__.py  base.py  resolution.py
sdk/nura/training/: __init__.py  trainer.py
tests/unit/: test_adapters.py  test_loader.py  test_rewards.py
