[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nura"
version = "0.1.0"
description = "Your data. Your model. Gets smarter every day."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nura Contributors" }]
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "trl",
    "peft",
    "fastapi",
    "uvicorn",
    "typer",
    "rich",
    "pydantic",
    "ollama",
    "datasets",
    "sqlalchemy",
]

[project.scripts]
nura = "sdk.nura.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
